# rz-tracetest

./: .gitignore  .gitmodules  README.md  flake.nix
.github/workflows/: nix.yaml
rz-tracetest/: CMakeLists.txt  adapter.cpp  adapter.h  main.cpp  rzemu.cpp  rzemu.h
